# kanban-app

./: LICENSE  README.md  docker-compose.yml
backend/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-00c1af6396997dac10f1b08856dd3daba446670111298db4729202b931785a7f.json  query-01a5ceb33333d1a8b5b25b1bc53506af1646c634c9fd9ab59df369e5c9dced9b.json  query-065b714dd7abec5168cd98b4338ef43e9a1cf9b12c3ba425c533321473bb5cc0.json  query-0ce87319ac3764b1bf89ab382be48bdcb35a1d2b531f876f944faa0aaa2c458c.json  query-0d2f2a13277956cbaac53c723991bbb2fd28487285b3ca9ce62d664a777d5ad6.json  query-131b7a6270fc161da7afa8a397c97ad8c3301503930a90e95e1c4ff8e46a2ca6.json  query-14fb5664c89625f0adb923884ec6a4b662f0888094ca05897ccc7c254b5317ce.json  query-1b7580d4870e1d43d80297bff6a45a7d9e2dc32da6fdd1fa5c23576ce46cdeb0.json  query-1ea632b83f5e26e4fa0c7c64a5f82acfc300609229281b6993f7aaa564830fd6.json  query-1ea88be660dab53c60d19aaf5df49b341b17f61be075061a55cd746e5596b50d.json  query-25362b67b007e9cb61821e0615b5a25dc1be96b697e3e4933a19d0fbf2f65c8f.json  query-4022a573953e461b18d116196d01b531d13cb50141b02f4597b1b58dc9a1c8d5.json  query-57967eea4adb2c99dd889e367c62506d56b6200e203fb0c555dbc62e2e080446.json  query-75ed28663be23f4fde8e7e3afc637aceb4b9b9a074c0b30ea26ce055c07d0f2b.json  query-7d9753b2d1921294f2fef96c615c573952dcabf44a9011bb85c2ddea82a3f8d0.json  query-80e4ef1dffd473c04c35793877a6059c2b8ce2ae96d1889fba3534e58f332d9c.json  query-8109b6bf62479b38bfccc8fb13c4e496ea043b87a64eeadc353c12a7d533ec2d.json  (+15 more)
backend/migrations/: 20260214233434_init.up.sql  (+3 more)
(+74 files in other folders)
